# Organ

./: .gitignore  .gitmodules  COLORS.md  Changelog.md  README.md  Release Notes.md
app/: README.md
app/code/Organ/: CMakeLists.txt  Organ.sln  design.txt  main.cpp
app/code/Organ/bindings/: bind_MIDI_controller.cpp  bind_app.cpp  bind_combinations.cpp  bind_keyboard.cpp  bind_organ.cpp  bind_piston.cpp  bind_piston_system.cpp  bind_section.cpp  bind_voice.cpp  bind_voice_group.cpp  bindings.cpp  bindings.h
app/code/Organ/cpp/: MIDI_controller.cpp  app.cpp  combinations.cpp  keyboard.cpp  organ.cpp  piston_system.cpp  section.cpp  voice.cpp  voice_group.cpp
app/code/Organ/gui/: design.drawio
app/code/Organ/gui/designer/: design.html  designer.js  style.css
app/code/Organ/h/: MIDI_controller.h  app.h  combinations.h  keyboard.h  organ.h  piston_system.h  section.h  voice.h  voice_group.h
app/code/Organ/python/: main.py  organ.pyi
app/design/: general.drawio  midiCommunication.drawio  modules.drawio  ports.drawio
design/: keyboard.drawio  legPistons.drawio  swell.drawio
embedded/: README.md
embedded/code/swell/: swell.ino
embedded/design/: handPistons.drawio  keyboard.drawio  pedal.drawio  swell.drawio  system.drawio  voicePistons.drawio
embedded/wiring/: swell.drawio
testCode/midiReceive/: midiReceive.ino
testCode/potentiometer.ino/: potentiometer.ino
website/: README.md
website/src/: about.html  contact.html  docs.html  index.html
website/src/js/: footer.js  header.js
website/src/style/: card.css  light.css  main.css
